@@ -6,7 +6,7 @@ import it.gov.pagopa.pu.bff.dto.AssessmentsRegistryFiltersDTO;
 import it.gov.pagopa.pu.bff.dto.generated.AssessmentsRegistryDTO;
 import it.gov.pagopa.pu.bff.dto.generated.PagedAssessmentsRegistry;
 import it.gov.pagopa.pu.bff.exception.InvalidAssessmentsRegistryException;
-import it.gov.pagopa.pu.bff.exception.ResourceNotFoundException;
+import it.gov.pagopa.pu.bff.exception.common.NotFoundException;
 import it.gov.pagopa.pu.bff.mapper.AssessmentsRegistryDTOMapper;
 import it.gov.pagopa.pu.bff.mapper.AssessmentsRegistryExtendedDTOMapper;
 import it.gov.pagopa.pu.bff.service.assessments_registry.AssessmentsRegistryRetrieverService;
@@ -32,13 +32,11 @@ import org.springframework.security.authorization.AuthorizationDeniedException;
 import org.springframework.web.server.ResponseStatusException;
 import uk.co.jemos.podam.api.PodamFactory;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.never;
 
 @ExtendWith(MockitoExtension.class)
 class AssessmentsRegistryRetrieverServiceImplTest {
@@ -87,11 +85,11 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     try (MockedStatic<AuthorizationService> authorizationServiceMockedStatic = Mockito.mockStatic(AuthorizationService.class)) {
       authorizationServiceMockedStatic.when(() -> AuthorizationService.validateUserForOrganizationId(filters.getOrganizationId(), loggedUser)).thenAnswer(a -> null);
 
-      Mockito.when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgByCode(filters.getOrganizationId(), debtPositionTypeOrg.getCode(), loggedUser.getMappedExternalUserId(), accessToken))
+      when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgByCode(filters.getOrganizationId(), debtPositionTypeOrg.getCode(), loggedUser.getMappedExternalUserId(), accessToken))
               .thenReturn(debtPositionTypeOrg);
-      Mockito.when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(filters, pageable, accessToken))
+      when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(filters, pageable, accessToken))
         .thenReturn(pagedModelAssessmentsRegistry);
-      Mockito.when(assessmentsRegistryExtendedDTOMapperMock.mapToPagedAssessmentsRegistry(pagedModelAssessmentsRegistry,debtPositionTypeOrgMap))
+      when(assessmentsRegistryExtendedDTOMapperMock.mapToPagedAssessmentsRegistry(pagedModelAssessmentsRegistry,debtPositionTypeOrgMap))
         .thenReturn(expectedResult);
 
       PagedAssessmentsRegistry result = assessmentsRegistryRetrieverService.getAssessmentsRegistries(filters, debtPositionTypeOrg.getCode(), pageable, loggedUser, accessToken);
@@ -115,7 +113,7 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     PageRequest pageable = PageRequest.of(0, 10);
     PagedModelAssessmentsRegistry pagedModelAssessmentsRegistry = podamFactory.manufacturePojo(PagedModelAssessmentsRegistry.class);
     Map<String,DebtPositionTypeOrg> debtPositionTypeOrgs = new HashMap<>();
-    for (@Valid AssessmentsRegistry assessmentsRegistry : pagedModelAssessmentsRegistry.getEmbedded().getAssessmentsRegistries()) {
+    for (@Valid AssessmentsRegistry assessmentsRegistry : Objects.requireNonNull(pagedModelAssessmentsRegistry.getEmbedded().getAssessmentsRegistries())) {
       DebtPositionTypeOrg debtPositionTypeOrg = podamFactory.manufacturePojo(DebtPositionTypeOrg.class);
       debtPositionTypeOrg.setCode(assessmentsRegistry.getDebtPositionTypeOrgCode());
       debtPositionTypeOrgs.put(assessmentsRegistry.getDebtPositionTypeOrgCode(),debtPositionTypeOrg);
@@ -125,13 +123,13 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     try (MockedStatic<AuthorizationService> authorizationServiceMockedStatic = Mockito.mockStatic(AuthorizationService.class)) {
       authorizationServiceMockedStatic.when(() -> AuthorizationService.validateUserForOrganizationId(filters.getOrganizationId(), loggedUser)).thenAnswer(a -> null);
 
-      Mockito.when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgs(filters.getOrganizationId(), null, loggedUser.getMappedExternalUserId(), accessToken))
+      when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgs(filters.getOrganizationId(), null, loggedUser.getMappedExternalUserId(), accessToken))
         .thenReturn((new ArrayList<>(debtPositionTypeOrgs.values())));
       ArgumentCaptor<AssessmentsRegistryFiltersDTO> filtersCaptor = ArgumentCaptor.forClass(AssessmentsRegistryFiltersDTO.class);
-      Mockito.when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
+      when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
           filtersCaptor.capture(), Mockito.eq(pageable), Mockito.eq(accessToken)))
         .thenReturn(pagedModelAssessmentsRegistry);
-      Mockito.when(assessmentsRegistryExtendedDTOMapperMock.mapToPagedAssessmentsRegistry(pagedModelAssessmentsRegistry, debtPositionTypeOrgs))
+      when(assessmentsRegistryExtendedDTOMapperMock.mapToPagedAssessmentsRegistry(pagedModelAssessmentsRegistry, debtPositionTypeOrgs))
         .thenReturn(expectedResult);
 
       PagedAssessmentsRegistry result = assessmentsRegistryRetrieverService.getAssessmentsRegistries(filters, null, pageable, loggedUser, accessToken);
@@ -140,8 +138,8 @@ class AssessmentsRegistryRetrieverServiceImplTest {
       assertSame(expectedResult, result);
       List<AssessmentsRegistryFiltersDTO> filterValues = filtersCaptor.getAllValues();
       assertEquals(1, filterValues.size());
-      TestUtils.reflectionEqualsByName(filters, filterValues.get(0), "debtPositionTypeOrgCodes");
-      assertEquals(debtPositionTypeOrgs.keySet(), filterValues.get(0).getDebtPositionTypeOrgCodes());
+      TestUtils.reflectionEqualsByName(filters, filterValues.getFirst(), "debtPositionTypeOrgCodes");
+      assertEquals(debtPositionTypeOrgs.keySet(), filterValues.getFirst().getDebtPositionTypeOrgCodes());
 
       authorizationServiceMockedStatic.verify(() -> AuthorizationService.validateUserForOrganizationId(filters.getOrganizationId(), loggedUser));
     }
@@ -161,10 +159,10 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     try (MockedStatic<AuthorizationService> authorizationServiceMockedStatic = Mockito.mockStatic(AuthorizationService.class)) {
       authorizationServiceMockedStatic.when(() -> AuthorizationService.validateUserForOrganizationId(filters.getOrganizationId(), loggedUser)).thenAnswer(a -> null);
 
-      Mockito.when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgs(filters.getOrganizationId(), null, loggedUser.getMappedExternalUserId(), accessToken))
+      when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgs(filters.getOrganizationId(), null, loggedUser.getMappedExternalUserId(), accessToken))
         .thenReturn(null);
 
-      assertThrows(ResourceNotFoundException.class, () -> assessmentsRegistryRetrieverService.getAssessmentsRegistries(filters, null, pageable, loggedUser, accessToken));
+      assertThrows(NotFoundException.class, () -> assessmentsRegistryRetrieverService.getAssessmentsRegistries(filters, null, pageable, loggedUser, accessToken));
 
       verifyNoInteractions(assessmentsRegistryServiceMock, assessmentsRegistryExtendedDTOMapperMock);
       authorizationServiceMockedStatic.verify(() -> AuthorizationService.validateUserForOrganizationId(filters.getOrganizationId(), loggedUser));
@@ -206,7 +204,7 @@ class AssessmentsRegistryRetrieverServiceImplTest {
       authorizationServiceMockedStatic.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(a -> null);
 
       Mockito.doNothing().when(debtPositionTypeOrgRetrieverServiceMock).validateOperator(organizationId,assessmentsRegistry.getDebtPositionTypeOrgCode(),loggedUser.getMappedExternalUserId(),accessToken);
-      Mockito.when(assessmentsRegistryServiceMock.createAssessmentsRegistry(assessmentsRegistry, accessToken))
+      when(assessmentsRegistryServiceMock.createAssessmentsRegistry(assessmentsRegistry, accessToken))
               .thenReturn(expectedResult);
 
       AssessmentsRegistry result = assessmentsRegistryRetrieverService.createAssessmentsRegistry(organizationId,assessmentsRegistry,loggedUser,accessToken);
@@ -269,15 +267,15 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     AssessmentsRegistry assessmentsRegistry = new AssessmentsRegistry();
     assessmentsRegistry.setDebtPositionTypeOrgCode("CODE123");
     DebtPositionTypeOrg debtPositionTypeOrg = podamFactory.manufacturePojo(DebtPositionTypeOrg.class);
-    Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken))
+    when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken))
       .thenReturn(assessmentsRegistry);
-    Mockito.when(assessmentsRegistryDTOMapperMock.map(assessmentsRegistry,debtPositionTypeOrg.getDescription()))
+    when(assessmentsRegistryDTOMapperMock.map(assessmentsRegistry,debtPositionTypeOrg.getDescription()))
       .thenReturn(expectedDTO);
 
     try (MockedStatic<AuthorizationService> authMock = Mockito.mockStatic(AuthorizationService.class)) {
       authMock.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(inv -> null);
 
-      Mockito.when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgByCode(
+      when(debtPositionTypeOrgRetrieverServiceMock.getDebtPositionTypeOrgByCode(
               organizationId, "CODE123", loggedUser.getMappedExternalUserId(), accessToken)
           ).thenReturn(debtPositionTypeOrg);
 
@@ -319,18 +317,18 @@ class AssessmentsRegistryRetrieverServiceImplTest {
 
     AssessmentsRegistry assessmentsRegistry = new AssessmentsRegistry();
     assessmentsRegistry.setDebtPositionTypeOrgCode("INVALID_CODE");
-    Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken))
+    when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken))
       .thenReturn(assessmentsRegistry);
 
     try (MockedStatic<AuthorizationService> authorizationServiceMockedStatic = Mockito.mockStatic(AuthorizationService.class)) {
       authorizationServiceMockedStatic.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser))
         .thenAnswer(a -> null);
 
-      Mockito.doThrow(new ResourceNotFoundException("OPERATOR_NOT_FOUND", "Operator not found"))
+      doThrow(new NotFoundException("OPERATOR_NOT_FOUND", "Operator not found"))
         .when(debtPositionTypeOrgRetrieverServiceMock)
         .getDebtPositionTypeOrgByCode(organizationId, "INVALID_CODE", loggedUser.getMappedExternalUserId(), accessToken);
 
-      assertThrows(ResourceNotFoundException.class, () ->
+      assertThrows(NotFoundException.class, () ->
         assessmentsRegistryRetrieverService.getAssessmentsRegistry(organizationId, assessmentRegistryId, loggedUser, accessToken));
 
       Mockito.verifyNoInteractions(assessmentsRegistryDTOMapperMock);
@@ -368,12 +366,12 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     try (MockedStatic<AuthorizationService> authMock = Mockito.mockStatic(AuthorizationService.class)) {
       authMock.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(a -> null);
 
-      Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
+      when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
       Mockito.doNothing().when(debtPositionTypeOrgRetrieverServiceMock).validateOperator(
         organizationId, body.getDebtPositionTypeOrgCode(), loggedUser.getMappedExternalUserId(), accessToken);
-      Mockito.when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
+      when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
         Mockito.any(), Mockito.any(), Mockito.eq(accessToken))).thenReturn(pagedResult);
-      Mockito.when(assessmentsRegistryServiceMock.updateAssessmentsRegistry(body, accessToken)).thenReturn(expected);
+      when(assessmentsRegistryServiceMock.updateAssessmentsRegistry(body, accessToken)).thenReturn(expected);
 
       AssessmentsRegistry result = assessmentsRegistryRetrieverService.updateAssessmentsRegistry(
         organizationId, assessmentRegistryId, body, loggedUser, accessToken);
@@ -417,10 +415,10 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     try (MockedStatic<AuthorizationService> authMock = Mockito.mockStatic(AuthorizationService.class)) {
       authMock.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(a -> null);
 
-      Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
+      when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
       Mockito.doNothing().when(debtPositionTypeOrgRetrieverServiceMock).validateOperator(
         organizationId, body.getDebtPositionTypeOrgCode(), loggedUser.getMappedExternalUserId(), accessToken);
-      Mockito.when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
+      when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
         Mockito.any(), Mockito.any(), Mockito.eq(accessToken))).thenReturn(pagedResult);
 
       assertThrows(ResponseStatusException.class, () ->
@@ -459,10 +457,10 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     try (MockedStatic<AuthorizationService> authMock = Mockito.mockStatic(AuthorizationService.class)) {
       authMock.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(a -> null);
 
-      Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
+      when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
       Mockito.doNothing().when(debtPositionTypeOrgRetrieverServiceMock).validateOperator(
         organizationId, body.getDebtPositionTypeOrgCode(), loggedUser.getMappedExternalUserId(), accessToken);
-      Mockito.when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
+      when(assessmentsRegistryServiceMock.findAssessmentsRegistriesByFilters(
         Mockito.any(), Mockito.any(), Mockito.eq(accessToken))).thenReturn(pagedResult);
 
       assertThrows(ResponseStatusException.class, () ->
@@ -489,7 +487,7 @@ class AssessmentsRegistryRetrieverServiceImplTest {
 
     try (MockedStatic<AuthorizationService> authMock = Mockito.mockStatic(AuthorizationService.class)) {
       authMock.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(a -> null);
-      Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
+      when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
 
       assertThrows(InvalidAssessmentsRegistryException.class, () ->
         assessmentsRegistryRetrieverService.updateAssessmentsRegistry(
@@ -516,7 +514,7 @@ class AssessmentsRegistryRetrieverServiceImplTest {
 
     try (MockedStatic<AuthorizationService> authMock = Mockito.mockStatic(AuthorizationService.class)) {
       authMock.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(a -> null);
-      Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
+      when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
 
       InvalidAssessmentsRegistryException ex =  assertThrows(InvalidAssessmentsRegistryException.class, () ->
         assessmentsRegistryRetrieverService.updateAssessmentsRegistry(
@@ -574,10 +572,10 @@ class AssessmentsRegistryRetrieverServiceImplTest {
     try (MockedStatic<AuthorizationService> authMock = Mockito.mockStatic(AuthorizationService.class)) {
       authMock.when(() -> AuthorizationService.validateUserForOrganizationId(organizationId, loggedUser)).thenAnswer(a -> null);
 
-      Mockito.when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
+      when(assessmentsRegistryServiceMock.getAssessmentsRegistry(assessmentRegistryId, accessToken)).thenReturn(existing);
       Mockito.doNothing().when(debtPositionTypeOrgRetrieverServiceMock).validateOperator(
         organizationId, body.getDebtPositionTypeOrgCode(), loggedUser.getMappedExternalUserId(), accessToken);
-      Mockito.when(assessmentsRegistryServiceMock.updateAssessmentsRegistry(body, accessToken)).thenReturn(expected);
+      when(assessmentsRegistryServiceMock.updateAssessmentsRegistry(body, accessToken)).thenReturn(expected);
 
       AssessmentsRegistry result = assessmentsRegistryRetrieverService.updateAssessmentsRegistry(
         organizationId, assessmentRegistryId, body, loggedUser, accessToken);
@@ -585,7 +583,7 @@ class AssessmentsRegistryRetrieverServiceImplTest {
       assertNotNull(result);
       assertSame(expected, result);
 
-      Mockito.verify(assessmentsRegistryServiceMock, Mockito.never())
+      Mockito.verify(assessmentsRegistryServiceMock, never())
         .findAssessmentsRegistriesByFilters(Mockito.any(), Mockito.any(), Mockito.eq(accessToken));
     }
   }
